RFMO-2553 Multi access line issue is fixed and extra margin is removed from check-box of route-log template

--- a/FMO/Fmo.UI/wwwroot/app/home/home.scss
+++ b/FMO/Fmo.UI/wwwroot/app/home/home.scss
@@ -66,6 +66,10 @@ md-input-container{
     @include padding(0px 0px 0px 0px);
 }
 
+md-list-item .md-list-item-inner>md-checkbox, md-list-item>md-checkbox {
+    @include margin(0px 0px 0px 0px);
+}
+
 .errorDialog{
     @include width(425px);
     @include height(216px);
